<resources>
    <string name="app_name">Diplomski</string>
    <string name="sign_out">Sign out</string>
    <string name="create_new_chapter">Create new chapter</string>
    <string name="add_new_language">Add new language</string>
    <string name="create_new_course">Create new course</string>
    <string name="course">Course</string>
    <string name="chapter_name">Chapter name</string>
    <string name="difficulty">Difficulty</string>
    <string name="confirm">Confirm</string>
    <string name="course_name">Course name</string>
    <string name="local">Local</string>
    <string name="foreign">Foreign</string>
    <string name="language">Language</string>
    <string name="chapter">Chapter</string>
    <string name="lesson_type">Lesson type</string>
    <string name="lesson">Lesson</string>
    <string name="question">Question</string>
    <string name="answer">Answer</string>
    <string name="create_new_lesson">Create new lesson</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="click_here_to_register">Don\'t have an account yet? Click here to register.</string>
    <string name="login">Login</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="register">Register</string>
    <string name="enter_your_answer">Enter your answer</string>
    <string name="submit">Submit</string>
    <string name="create_new_task">Create new task</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="tasks">Tasks</string>
</resources>