<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="viewModel"
            type="com.example.diplomski_android.viewmodel.MainViewModel" />
        <variable
            name="insertTaskFragment"
            type="com.example.diplomski_android.ui.fragment.InsertTaskFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragment.InsertTaskFragment">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/menuInsertTaskCourses"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:helperTextTextColor="#E91E63"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="32dp">

            <AutoCompleteTextView
                android:id="@+id/actvTaskCourse"
                android:hint="@string/course"
                android:labelFor="@id/menuInsertTaskCourses"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/menuInsertTaskChapters"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:helperTextTextColor="#E91E63"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/menuInsertTaskCourses"
            android:layout_margin="32dp">

            <AutoCompleteTextView
                android:id="@+id/actvTaskChapter"
                android:hint="@string/chapter"
                android:labelFor="@id/menuInsertTaskChapters"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/menuInsertTaskLessons"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:helperTextTextColor="#E91E63"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/menuInsertTaskChapters"
            android:layout_margin="32dp">

            <AutoCompleteTextView
                android:id="@+id/actvTaskLesson"
                android:hint="@string/lesson"
                android:labelFor="@id/menuInsertTaskLessons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/insertTaskQuestionContainer"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="32dp"
            app:helperTextTextColor="#E91E63"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/menuInsertTaskLessons">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/insertTaskQuestion"
                android:text="@={viewModel.newTask.question}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/question" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/insertTaskAnswerContainer"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="32dp"
            app:helperTextTextColor="#E91E63"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/insertTaskQuestionContainer">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/insertTaskAnswer"
                android:text="@={viewModel.newTask.answer}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/answer" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonInsertTaskConfirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="32dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>