<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:padding="8dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#B39DDB"
    android:layout_margin="8dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvLessonName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/tvLessonStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:layout_marginTop="8dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llLessonItemAdmin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/buttonManageTasks"
            android:layout_width="64dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/tasks"
            android:textSize="12sp"
            style="?android:attr/buttonBarButtonStyle" />

        <ImageButton
            android:id="@+id/buttonEditLesson"
            android:layout_width="64dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:src="@drawable/ic_baseline_edit_24"
            style="?android:attr/buttonBarButtonStyle"
            android:contentDescription="@string/edit"/>

        <ImageButton
            android:id="@+id/buttonDeleteLesson"
            android:layout_width="64dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:src="@drawable/ic_baseline_delete_24"
            style="?android:attr/buttonBarButtonStyle"
            android:contentDescription="@string/delete"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>