<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="viewModel"
            type="com.example.diplomski_android.viewmodel.MainViewModel" />
        <variable
            name="insertLessonFragment"
            type="com.example.diplomski_android.ui.fragment.InsertLessonFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragment.InsertLessonFragment">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/menuInsertLessonCourses"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:helperTextTextColor="#E91E63"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="32dp">

            <AutoCompleteTextView
                android:id="@+id/actvLessonCourse"
                android:hint="@string/course"
                android:labelFor="@id/menuInsertLessonCourses"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/menuInsertLessonChapters"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:helperTextTextColor="#E91E63"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/menuInsertLessonCourses"
            android:layout_margin="32dp">

            <AutoCompleteTextView
                android:id="@+id/actvLessonChapter"
                android:hint="@string/chapter"
                android:labelFor="@id/menuInsertLessonChapters"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/menuInsertLessonType"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:helperTextTextColor="#E91E63"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/menuInsertLessonChapters"
            android:layout_margin="32dp">

            <AutoCompleteTextView
                android:id="@+id/actvLessonType"
                android:hint="@string/lesson_type"
                android:labelFor="@id/menuInsertLessonType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonInsertLessonConfirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="32dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
